--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <h1>La leyenda de Bikut</h1>
+    <h1>Presentación de proyecto</h1>
 
-    <p>Bikut era un hombre que fue alimentado desde niño con Toe y Ayahuasca</p>
+    <p>Documentación de cultura Awajún y Wampis de la región Amazonas, creando como subproducto un diccionario interactivo.</p>
 </body>
 
 </html>
