primera entrada de la página de recursos (200 palabras) aún por completar palabras

--- a/resources.html
+++ b/resources.html
@@ -22,7 +22,16 @@
     </header>
 
     <main>
-        <h1>En construcción ...</h1>
+        <h1>Recursos Lingüísticos</h1>
+        <p>En este espacio compartimos materiales y entradas relacionadas con la documentación, enseñanza y preservación de las lenguas awajún y wampis.</p>
+
+        <article>
+            <h2>200 palabras presentes en toda lengua y su traducción en awajún y wampis</h2>
+            <p>Se ha recopilado 200 palabras universales a todos los idiomas con sus traducciones al awajún y wampis, y se presenta como un inicio.</p>
+            <a href="blogentries/200words.html">
+                <button>Leer más.</button>
+            </a>
+        </article>
     </main>
 
     <footer>
