modificación de header y navbar

--- a/dictionary.html
+++ b/dictionary.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/styles.css">
     <title>Diccionario Awajún - Wampis</title>
 </head>
 
@@ -26,7 +27,7 @@
     </main>
 
     <footer>
-        <p>Proyecto FIONA 2025 — Mapeo y documentación lingüística del awajún y wampis. Universidad Nacional Intercultural Fabiola Salazar Leguía de Bagua.</p>
+        <p>Proyecto de Mapeo y documentación lingüística del Awajún y Wampis - 2025</p>
     </footer>
 </body>
 
