--- a/blogentries/200words.html
+++ b/blogentries/200words.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/styles.css">
     <title>200 palabras comunes</title>
 </head>
 
@@ -85,7 +86,7 @@
     </section>
 
     <footer>
-        <p>Proyecto FIONA 2025 — Mapeo y documentación lingüística del awajún y wampis. Universidad Nacional Intercultural Fabiola Salazar Leguía de Bagua.</p>
+        <p>Proyecto de Mapeo y documentación lingüística del Awajún y Wampis - 2025</p>
     </footer>
 </body>
 
